added a comment on improving strategy

--- a/notebooks/hurst_rsi.ipynb
+++ b/notebooks/hurst_rsi.ipynb
@@ -863,6 +863,8 @@
     "\n",
     "Parameters like buying percentage, maximum consecutive buying days, and RSI period should be optimized to achieve better outcomes. Techniques such as brute force, machine learning approaches, or optimizers like SLSQP can be employed for this purpose. \n",
     "\n",
+    "We can also rebalance the stocks each year using take profit strategy to improve results. This could be another approach.\n",
+    "\n",
     "Another viable approach is to diversify beyond mean-reverting techniques, as the market is not always in a mean-reverting stage. Incorporating trend-following indicators like MACD can help adapt to different market conditions. \n",
     "\n",
     "Additionally, exploring the Kalman Filter, a tool for estimating joint probability distributions over variables in each frame, presents another avenue for forecasting stock price movements. This strategy, enriched with these considerations, is worth experimenting with.\n",
